deployment/rq-worker.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: icecompass-api-rq-worker
  namespace: production
  labels:
    app: icecompass-api-rq-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: icecompass-api-rq-worker
  template:
    metadata:
      labels:
        app: icecompass-api-rq-worker
    spec:
      containers:
        - name: icecompass-api
          image: 670211327818.dkr.ecr.eu-central-1.amazonaws.com/icecompass:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5050
          command: ["venv/bin/rq"]
          args: ['worker', '-u', 'redis://redis-master:6379/0', 'iceranking-tasks']
---
