deployment/flask.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: icecompass-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: icecompass-api
  template:
    metadata:
      labels:
        app: icecompass-api
    spec:
      containers:
        - name: icecompass-api
          image: iceranking-api
          imagePullPolicy: Never
          ports:
            - containerPort: 5050
---

apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 5050
  selector:
    app: icecompass-api
  type: LoadBalancer
