deployment/icecompass-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icecompass-api
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: icecompass-api
  template:
    metadata:
      labels:
        app: icecompass-api
    spec:
      containers:
        - name: icecompass-api
          image: 670211327818.dkr.ecr.eu-central-1.amazonaws.com/icecompass:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5050
      imagePullSecrets:
        - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: flask-service
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ports:
    - port: 80
      targetPort: 5050
      protocol: TCP
  type: NodePort
  selector:
    app: icecompass-api
